RESOLVED FIXED159337
[EFL] Many layout tests are timeout after r202532.
https://bugs.webkit.org/show_bug.cgi?id=159337
Summary [EFL] Many layout tests are timeout after r202532.
Hunseop Jeong
Reported 2016-07-01 02:23:34 PDT
202725 failure #28700 Failed exiting early after 0 crashes and 50 timeouts. 7352 tests run. 60 failures 1 new passes 1 missing results api tests ... 202534 failure #28634 Failed exiting early after 0 crashes and 50 timeouts. 7349 tests run. 78 failures 1 new passes 4 missing results api tests 202531 failure #28633 Failed 196 failures 35 new passes 27 flakes 5 missing results EFL port's layout test failed for a long time.
Attachments
Patch (2.65 KB, patch)
2016-07-01 02:48 PDT, Hunseop Jeong
no flags
Patch (2.91 KB, patch)
2016-07-01 07:49 PDT, Hunseop Jeong
no flags
Hunseop Jeong
Comment 1 2016-07-01 02:48:52 PDT
WebKit Commit Bot
Comment 2 2016-07-01 02:49:40 PDT
Attachment 282533 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/CoordinatedGraphics/CoordinatedDrawingAreaProxy.cpp:75: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/CoordinatedGraphics/CoordinatedDrawingAreaProxy.cpp:82: More than one command on the same line [whitespace/newline] [4] ERROR: Source/WebKit2/UIProcess/CoordinatedGraphics/CoordinatedDrawingAreaProxy.h:65: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 3 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Gyuyoung Kim
Comment 3 2016-07-01 02:56:49 PDT
Comment on attachment 282533 [details] Patch Patch looks good because this is copied from DrawingAreaProxyImpl::dispatchAfterEnsuringDrawing(). But please fix style error.
Hunseop Jeong
Comment 4 2016-07-01 03:05:11 PDT
I think that is false positive. Other codes also add white space before '(' in function callback.
Gyuyoung Kim
Comment 5 2016-07-01 05:43:15 PDT
(In reply to comment #4) > I think that is false positive. > Other codes also add white space before '(' in function callback. No, there are definitely code which follows coding style. If there is no rational reason, I think we have to adhere coding style alarm. void StackVisitor::Frame::dump(PrintStream& out, Indenter indent, std::function<void(PrintStream&)> prefix) const { if (!this->callFrame()) { out.print(indent, "frame 0x0\n"); return; }
Hunseop Jeong
Comment 6 2016-07-01 07:49:39 PDT
Hunseop Jeong
Comment 7 2016-07-01 07:53:06 PDT
(In reply to comment #5) > (In reply to comment #4) > > I think that is false positive. > > Other codes also add white space before '(' in function callback. > > No, there are definitely code which follows coding style. If there is no > rational reason, I think we have to adhere coding style alarm. > > void StackVisitor::Frame::dump(PrintStream& out, Indenter indent, > std::function<void(PrintStream&)> prefix) const > { > if (!this->callFrame()) { > out.print(indent, "frame 0x0\n"); > return; > } Okay. I changed it!!
Gyuyoung Kim
Comment 8 2016-07-01 19:43:32 PDT
Comment on attachment 282548 [details] Patch r=me.
WebKit Commit Bot
Comment 9 2016-07-01 20:03:52 PDT
Comment on attachment 282548 [details] Patch Clearing flags on attachment: 282548 Committed r202773: <http://trac.webkit.org/changeset/202773>
WebKit Commit Bot
Comment 10 2016-07-01 20:03:56 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.