[EFL] Many layout tests are timeout after r202532. https://bugs.webkit.org/show_bug.cgi?id=159337

Reviewed by Gyuyoung Kim.

WebPageProxy::forceRepaint() wait for the next commit from the web process
after r202532, but WebPageProxy::callAfterNextPresentationUpdate() is not
implemented in CoordinatedDrawingAreaProxy.

* UIProcess/CoordinatedGraphics/CoordinatedDrawingAreaProxy.cpp:
(WebKit::CoordinatedDrawingAreaProxy::contentsRect):
(WebKit::CoordinatedDrawingAreaProxy::dispatchAfterEnsuringDrawing):
(WebKit::CoordinatedDrawingAreaProxy::sizeDidChange):
* UIProcess/CoordinatedGraphics/CoordinatedDrawingAreaProxy.h:
(WebKit::CoordinatedDrawingAreaProxy::page):


Canonical link: https://commits.webkit.org/177504@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202773 268f45cc-cd09-0410-ab3c-d52691b4dbfc